# ResoniteIO

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  buf.yaml  clicomp.sh  compose.yml  justfile  mkdocs.yml  resonite_io_plan.md
.claude/: settings.container.json  settings.json
.claude/agents/: code-quality-reviewer.md  docstring-author.md  spec-driven-implementer.md  spec-planner.md  spec-test-author.md
.claude/memory/: MEMORY.md  feedback_bepinex_transitive_dlls.md  feedback_frooxengine_settings_api.md  feedback_grpc_tools_message_duplication.md  feedback_locomotion_external_input.md  feedback_netstandard20_polyfills.md  feedback_proto_rpc_naming_except.md  reference_betterproto2_packaging.md  reference_camera_render_to_bitmap_30fps_cap.md  reference_generated_proto_layout.md  reference_load_bearing_whys.md
.codex/: config.toml
.codex/agents/: code-quality-reviewer.toml  docstring-author.toml  spec-driven-implementer.toml  spec-planner.toml  spec-test-author.toml
.codex/rules/: default.rules
.devcontainer/: Dockerfile  devcontainer.json  initialize.sh
.github/scripts/: fetch-interprocesslib.sh
.github/workflows/: docs.yml  dotnet.yml  pre-commit.yml  proto-check.yml  publish.yml  test.yml  type-check.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/cli/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/cli/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/cli/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/cli/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/cli/: index.html
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/cli/: index.html
0.5.0/search/: search_index.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: RELEASE.md  cli.md  dash_modality_plan.md  index.md  pointer_modality_plan.md
memory/: MEMORY.md  feedback_agent_model_inherit.md  feedback_auth_login_api.md  feedback_bepinex_transitive_dlls.md  feedback_bridge_engine_thread_dispatch.md  feedback_camera_v2_constraints.md  feedback_claude_drives_e2e_verification.md  feedback_codex_drives_e2e_verification.md  feedback_core_mod_layering.md  feedback_cursor_lock_mechanism.md  feedback_dash_overlay_vs_contextmenu.md  feedback_docstring_author_includes_cleanup.md  feedback_dotnet_local_tools.md  feedback_e2e_no_irreversible_cloud_writes.md  feedback_e2e_single_signin_per_boot.md  feedback_examples_no_private_prefix.md  feedback_git_no_pager.md  feedback_grabber_engine_api.md  feedback_grpc_client_cancel_exception_surface.md  feedback_interprocesslib_callback_signature.md  feedback_locomotion_external_input.md  feedback_locomotion_headfacing_body_relative.md  feedback_manipulation_grabber.md  feedback_microphone_engine_tap.md  feedback_no_private_prefix_on_cross_imports.md  feedback_proto_rpc_naming_except.md  feedback_protobuf_3_11_4_in_resonite.md  feedback_record_save_await_upload_task.md  feedback_release_pipeline.md  feedback_resonite_bundled_dlls.md  feedback_resonite_status_before_asking.md  feedback_respond_in_japanese.md  feedback_session_bridge_no_proto_change.md  feedback_speaker_engine_tap.md  feedback_streaming_fps_limit_test_tolerance.md  feedback_test_only_service_host.md  reference_betterproto2_packaging.md  reference_generated_proto_layout.md  reference_load_bearing_whys.md  reference_pressure_vessel_paths.md  (+3 more)
mod/: Directory.Build.targets  README.md  ResoniteIO.sln  thunderstore.toml
python/: README.md  pyproject.toml
python/examples/: README.md  auth_status.py  camera_view.py  connection_ping.py  contact_browse.py  context_menu_interact.py  cursor_move.py  dash_navigate.py  display_config.py  grabber_grab.py  inventory_manage.py  lifecycle_shutdown.py  locomotion_drive.py  manipulation_grab.py  microphone_send.py  server_info.py  session_inspect.py  session_ping.py  speaker_record.py  world_browse.py
python/src/resoio/: __init__.py  _client.py  auth.py  camera.py  connection.py  contact.py  context_menu.py  cursor.py  dash.py  display.py  grabber.py  info.py  inventory.py  lifecycle.py  locomotion.py  manipulation.py  microphone.py  session.py  speaker.py  world.py
python/src/resoio/_generated/resonite_io/v1/: __init__.py
python/src/resoio/cli/: __init__.py  _recording_io.py  auth.py  capture.py  contact.py  context_menu.py  cursor.py  dash.py  display.py  drive.py  grab.py  info.py  inventory.py  locomotion.py  manipulate.py  mic.py  output.py  ping.py  record.py  screenshot.py  session.py  shutdown.py  terminate.py  world.py
python/tests/: conftest.py
python/tests/e2e/: README.md  auth.py  camera_stream.py  conftest.py  connection.py  contact.py  context_menu.py  cursor.py  dash.py  display_resolution.py  grabber.py  inventory.py  lifecycle.py  locomotion.py  manipulation.py  mic_auto_default.py  mic_send.py  session.py  speaker_record.py  world.py
python/tests/e2e/fixtures/: generate_sine.py
python/tests/resoio/: test_api_contract.py  test_auth.py  test_camera.py  test_connection.py  test_contact.py  test_context_menu.py  test_cursor.py  test_dash.py  test_display.py  test_grabber.py  test_info.py  test_inventory.py  test_lifecycle.py  test_locomotion.py  test_manipulation.py  test_microphone.py  test_proto_contract.py  test_session.py  test_speaker.py  test_version_check.py  test_world.py
python/tests/resoio/cli/: test_auth.py  test_capture.py  test_contact.py  test_context_menu.py  test_cursor.py  test_dash.py  test_display.py  test_drive.py  test_grab.py  test_info.py  test_inventory.py  test_locomotion.py  test_manipulate.py  test_mic.py  test_output.py  test_ping.py  test_record.py  test_screenshot.py  test_session.py  test_shutdown.py  test_terminate.py  test_world.py
scripts/: bump-version.sh  container-init.sh  decompile.sh  e2e_camera_v2.py  gen_proto.sh  host_agent.py  migrate_codex.py  renderer-prebuilt-hash.sh  resize_icon.py  resonite_cli.py
(+450 files in other folders)
