[project]
name = "resoio"
version = "0.1.0"
description = "Python client for Resonite IO"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
  "argcomplete>=3.5",
  "av>=14",
  "betterproto2[grpclib]",
  "numpy>=2.0",
  "prompt-toolkit>=3.0",
]

[project.scripts]
resoio = "resoio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  # Compiler ships as its own package (no `[compiler]` extra exists on
  # betterproto2 itself — confirmed against PyPI metadata 2026-05).
  "betterproto2_compiler",
  # E2E only: tests/e2e/camera_stream.py uses cv2.VideoWriter to record
  # captured BGRA frames as MP4. The headless distribution avoids X11/Qt
  # system libs (libxcb etc.) which the dev container does not ship.
  "opencv-python-headless>=4.10",
  "pyright>=1.1.398",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.1.1",
  "pytest-mock>=3.14.0",
]
# Documentation site (MkDocs Material + mkdocstrings). Kept separate from
# `dev` so the `just run` type/test gate is unaffected; build via `just
# docs-build` / preview via `just docs-serve`.
# mkdocs は `<2` で上限固定: MkDocs 2.0 は plugin システムを廃止する破壊的
# rewrite で、mkdocstrings を含む全 plugin が動かなくなる (Material チームも
# 移行を非推奨とし 1.x 据え置きを推奨)。誤って 2.0 を引かないよう明示的に弾く。
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.6,<10",
  "mkdocstrings[python]>=0.27",
]


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
]
markers = [
  "e2e: end-to-end tests that require host-agent and a live Resonite client",
  "api_contract: public API / proto wire contract pins (Hyrum's law mitigation, not behavior tests)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = true
log_level = "INFO"

minversion = "6.0"
# Default collection is unit tests only. e2e は test_ prefix を持たないファイル
# 構成にしており (tests/e2e/<name>.py)、`just e2e-test` 経由で明示的にパスを
# 渡したときだけ collect される。
testpaths = "tests/resoio"
# tests/helpers.py を `from tests.helpers import ...` で解決させるため、
# python/ を sys.path に追加する。
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
exclude = [
  "**/__pycache__",
  "**/.venv",
  "tests/",
  "src/resoio/_generated/",
]
strict = ["src/"]
reportMissingTypeStubs = false
reportImplicitOverride = true
reportPrivateUsage = "warning"

[tool.ruff]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

include = ["*.py"]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "build",
  "dist",
  "node_modules",
  "src/resoio/_generated/",
]

# Linter ignore codes
[tool.ruff.lint]

select = [
  "E",
  "F",
  "W",
  "I",
]

ignore = [
  "E203", # Whitespace before ':' (E203)
  "E402", # Module level import not at top of file.
  "E501", # Line too long (82 > 79 characters) (E501)
  "F811", # Redefinition of unused name from line n (F811)
  "E741", # Do not define classes named 'I', 'O', or 'l' (E742)
  "E266", # too many leading '#' for block comment (E266)
  "F401", # Module imported but unused,
]


[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.coverage.run]
omit = [
  "src/resoio/_generated/*",
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == __main__:",
  "pass",
  "raise ImportError",
]
