[project]
# PyPI distribution name. The importable package / CLI command stays `resoio`
# (see [tool.hatch.build.targets.wheel] below and [project.scripts]).
name = "resonite-io"
version = "0.1.1"
description = "Python client for Resonite IO"
readme = "README.md"
authors = [{ name = "mlshukai" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "argcomplete>=3.5",
  "av>=14",
  # betterproto2 の runtime は、生成物 (_generated/) をコンパイルした
  # betterproto2_compiler と major.minor が一致していないと import 時に
  # check_compiler_version で ImportError になる (compiler a.b.c ↔ runtime x.y.z
  # は a=x かつ b=y のときのみ互換)。生成物は 0.10.x compiler 製なので runtime も
  # 0.10.x に固定する。未固定だと `pip install resonite-io` が将来の非互換版を
  # 引いて import が壊れる。compiler 側の固定は [dependency-groups].dev と lockstep。
  "betterproto2[grpclib]>=0.10,<0.11",
  "numpy>=2.0",
  "prompt-toolkit>=3.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MLShukai/ResoniteIO"
Repository = "https://github.com/MLShukai/ResoniteIO"

[project.scripts]
resoio = "resoio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The distribution name (`resonite-io`) differs from the import package
# (`resoio`), so hatchling cannot infer the wheel contents from the project
# name — point it at the src-layout package explicitly.
[tool.hatch.build.targets.wheel]
packages = ["src/resoio"]

[dependency-groups]
dev = [
  # Compiler ships as its own package (no `[compiler]` extra exists on
  # betterproto2 itself — confirmed against PyPI metadata 2026-05).
  # runtime betterproto2 (>=0.10,<0.11) と major.minor を揃える: `just gen-proto`
  # が 0.11+ compiler を引くと生成物が runtime と非互換になり import が壊れる。
  "betterproto2_compiler>=0.10,<0.11",
  # E2E only: tests/e2e/camera_stream.py uses cv2.VideoWriter to record
  # captured BGRA frames as MP4. The headless distribution avoids X11/Qt
  # system libs (libxcb etc.) which the dev container does not ship.
  "opencv-python-headless>=4.10",
  "pyright>=1.1.398",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.1.1",
  "pytest-mock>=3.14.0",
]
# Documentation site (MkDocs Material + mkdocstrings). Kept separate from
# `dev` so the `just run` type/test gate is unaffected; build via `just
# docs-build` / preview via `just docs-serve`.
# mkdocs は `<2` で上限固定: MkDocs 2.0 は plugin システムを廃止する破壊的
# rewrite で、mkdocstrings を含む全 plugin が動かなくなる (Material チームも
# 移行を非推奨とし 1.x 据え置きを推奨)。誤って 2.0 を引かないよう明示的に弾く。
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.6,<10",
  "mkdocstrings[python]>=0.27",
  # mike: バージョン別 docs を gh-pages に配置し、Material の version selector で
  # 切り替える (Sphinx/ReadTheDocs 相当)。CI (.github/workflows/docs.yml) が使う。
  "mike>=2.1",
]


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
]
markers = [
  "e2e: end-to-end tests that require host-agent and a live Resonite client",
  "api_contract: public API / proto wire contract pins (Hyrum's law mitigation, not behavior tests)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = true
log_level = "INFO"

minversion = "6.0"
# Default collection is unit tests only. e2e は test_ prefix を持たないファイル
# 構成にしており (tests/e2e/<name>.py)、`just e2e-test` 経由で明示的にパスを
# 渡したときだけ collect される。
testpaths = "tests/resoio"
# tests/helpers.py を `from tests.helpers import ...` で解決させるため、
# python/ を sys.path に追加する。
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
exclude = [
  "**/__pycache__",
  "**/.venv",
  "tests/",
  "src/resoio/_generated/",
]
strict = ["src/"]
reportMissingTypeStubs = false
reportImplicitOverride = true
reportPrivateUsage = "warning"

[tool.ruff]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

include = ["*.py"]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "build",
  "dist",
  "node_modules",
  "src/resoio/_generated/",
]

# Linter ignore codes
[tool.ruff.lint]

select = [
  "E",
  "F",
  "W",
  "I",
]

ignore = [
  "E203", # Whitespace before ':' (E203)
  "E402", # Module level import not at top of file.
  "E501", # Line too long (82 > 79 characters) (E501)
  "F811", # Redefinition of unused name from line n (F811)
  "E741", # Do not define classes named 'I', 'O', or 'l' (E742)
  "E266", # too many leading '#' for block comment (E266)
  "F401", # Module imported but unused,
]


[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.coverage.run]
omit = [
  "src/resoio/_generated/*",
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == __main__:",
  "pass",
  "raise ImportError",
]
